# namigator

./: CMakeLists.txt  CMakePresets.json  README.md  build-dev.sh  build.bat  build.sh
.github/workflows/: build.yml
MapBuilder/: CMakeLists.txt
MapViewer/: CMakeLists.txt
MapViewerSDL/: CMakeLists.txt  Camera.cpp  Camera.hpp  DetourDebugDraw.cpp  DetourDebugDraw.hpp  README.md  Renderer.cpp  Renderer.hpp  SphereMesh.hpp  gl_core_3_3.cpp  gl_core_3_3.hpp  gl_loader.sh  main.cpp
cmake/: namigatorConfig.cmake.in
parser/: CMakeLists.txt
pathfind/: CMakeLists.txt
test/: CMakeLists.txt
utility/: CMakeLists.txt
